# Quantum-Inspired-NFR-Classification

./: .gitignore  ARTIFACT_README.md  AUTHOR_RESPONSE_TO_SUPERVISOR.md  README.md  REVIEWER_RESPONSE.md  pyproject.toml  requirements-lock.txt  requirements.txt
data/: README.md
docs/: artifact_submission_checklist.md  author_mastery_checklist.md  author_mastery_checklist_vi.docx  de_cuong_nghien_cuu.md  final_submission_audit.md  oral_defense_pack_vi.md  phan_hoi_muc_4_khai_bao_ai.docx  reproducibility_notes.md  supervisor_response_latest.md
paper/: README.md  main.tex  main_cameraready.tex
reports/: all_data_run_summary.md  hybrid_weight_sweep.csv  nice_ablation_fold_results.csv  nice_ablation_metadata.json  nice_ablation_report.md  nice_ablation_summary.csv  nice_cv_fold_results.csv  nice_cv_report.md  nice_cv_statistical_tests.csv  nice_cv_summary.csv  nice_deletion_comparison_detail.csv  nice_deletion_comparison_summary.csv  nice_explainability_deletion_detail.csv  nice_explainability_deletion_metadata.json  nice_explainability_deletion_report.md  nice_explainability_deletion_summary.csv  nice_finetuned_transformer_distilbert_base_uncased_fold_results.csv  nice_finetuned_transformer_distilbert_base_uncased_metadata.json  nice_finetuned_transformer_distilbert_base_uncased_report.md  nice_finetuned_transformer_distilbert_base_uncased_summary.csv  nice_multilabel_metrics.csv  nice_multilabel_report.md  nice_paired_bootstrap_summary.csv  nice_per_label_threshold_fold_results.csv  nice_per_label_threshold_report.md  nice_per_label_threshold_summary.csv  (+6 more)
(+16 files in other folders)
