[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-re-nfr"
version = "0.1.0"
description = "Quantum-inspired multi-label classification of non-functional requirements."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]
sbert = ["sentence-transformers>=3.0"]
transformer = ["torch>=2.0", "transformers>=4.40"]

[tool.setuptools.packages.find]
where = ["src"]
